--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,12 @@
-<h1>Hello {{FirstName}} {{LastName}}</h1>
+{{!-- <h1>Hello {{FirstName}} {{LastName}}</h1>
 <h2>Email: {{Email}}</h2>
 <h3>Username: {{Username}}</h3>
 
-<a href="/users/logout">Logout</a>
+<a href="/users/logout">Logout</a> --}}
+
+
+<h1>Hello {{FirstName}} {{LastName}}</h1>
+<h2>Status: {{Status}}</h2>
+<h2>Email: {{Email}}</h2>
+<h3>Username: {{Username}}</h3>
+<a href="/users/logout">Log out</a>
